--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,4 @@ DISCORDJS_BOT_TOKEN=your-discord-bot-token-here
 SPOTIFY_CLIENT_ID=your-spotify-client-id-here
 SPOTIFY_CLIENT_SECRET=your-spotify-client-secret-here
 SPOTIFY_REDIRECT_URI=your-redirect-uri-here
+DATABASE_URL=your-database-url-here
